--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -4,15 +4,20 @@ appender.console.name = Console
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
 
-# File Appender
-appender.file.type = File
-appender.file.name = File
-appender.file.fileName = logs/application.log
-appender.file.layout.type = PatternLayout
-appender.file.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+# Rolling File Appender
+appender.rolling.type = RollingFile
+appender.rolling.name = RollingFile
+appender.rolling.fileName = logs/application.log
+appender.rolling.filePattern = logs/application-%d{yyyy-MM-dd-HH-mm-ss}.log
+appender.rolling.layout.type = PatternLayout
+appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+appender.rolling.policies.type = Policies
+appender.rolling.policies.startup.type = OnStartupTriggeringPolicy
+appender.rolling.strategy.type = DefaultRolloverStrategy
+appender.rolling.strategy.max = 30
 
 # Root Logger
 rootLogger.level = info
-rootLogger.appenderRefs = console, file
+rootLogger.appenderRefs = console, rolling
 rootLogger.appenderRef.console.ref = Console
-rootLogger.appenderRef.file.ref = File
+rootLogger.appenderRef.rolling.ref = RollingFile
