new kayvault picture

--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -32,8 +32,7 @@ utils:
 emailSender:
   smtpHost: "smtphost"
   smtpPort: "smtpport"
-  smtpUsername: "smtpusername"
-  smtpPassword: "smtppassword"
+  smtpFromAddress: "smtpfromaddress"
   smtpToAddress: "smtptoaddress"
 
 maxThreadsForAnalysis: 20
